...
          leading: Icon(FontAwesomeIcons.mapMarkedAlt),
          onTap: () {
            Navigator.pushNamed(context, GoogleMapScreen.screenId);
          },
        ),
        ListTile(
          key: Key('address'),
          title: TextWriteWidget('Add Address', tSize),
          leading: Icon(FontAwesomeIcons.home),
          onTap: () {
            Navigator.pushNamed(context, AddAddress.screenId);
            // ...
          },
...
